--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@clerk/nextjs": "^4.29.3",
     "@google/generative-ai": "^0.1.3",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "^5.10.2",
+    "@prisma/client": "5.10.2",
     "@radix-ui/react-checkbox": "^1.1.4",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
@@ -51,7 +51,7 @@
     "eslint": "^8.54.0",
     "eslint-config-next": "^14.0.3",
     "postcss": "^8.4.31",
-    "prisma": "^5.10.2",
+    "prisma": "5.10.2",
     "react-email": "^1.9.5",
     "tailwindcss": "^3.3.5"
   }
